# pycdo

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  README.qmd  create.py  operators.json  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  config.yml
.github/workflows/: release.yml  test.yml
build-pycdo/: build.py
docs/: conf.py  index.md
pycdo/: __init__.py  cdo_operation.py  cdo_options.py
pycdo/operators/: __init__.py  abs.py  acos.py  add.py  addc.py  addtrend.py  adipot.py  adisit.py  aexpr.py  aexprf.py  after.py  ap2pl.py  asin.py  atan.py  atan2.py  bandpass.py  bitrounding.py  bottomvalue.py  cat.py  changemulti.py  chcode.py  chlevel.py  chlevelc.py  chlevelv.py  chname.py  chparam.py  chunit.py  cinfo.py  clone.py  cmorlite.py  codetab.py  collgrid.py  consecsum.py  consects.py  const.py  contour.py  copy.py  cos.py  dayadd.py  dayavg.py  (+655 more)
src/pycdo/: __init__.py  cdo_cache.py  cdo_operation.py  cdo_operator.py  cdo_options.py  debug.py
src/pycdo/data/: geopotential.nc
src/pycdo/operators/: mergetime.py  remapbil.py  setllonlatbox.py  sub.py  ymonmean.py
tests/: test_build.py
tests/unit/: test_basic.py  test_build.py  test_cdo_cache.py  test_ephemeral.py  test_run.py
